syntax = "proto3";

package greet;
option go_package="greetpb";

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse { 
    string message = 1;
}

service GreetingService {
    // Unary 
    rpc Greet (GreetRequest) returns (GreetResponse) {};

    // // Streaming Server
    // // Response from server as a stream
    // rpc GreetManyTimes (GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};

    // // Streaming Client
    // // Request from client is a stream
    // rpc LongGreet (stream LongGreetRequest) returns (LongGreetResponse) {};

    // // Bi-directional Streaming
    // // Both client or server send a stream
    // rpc GreetEveryone (stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {};
}